Working on analysis section

--- a/final/chromatic.tex
+++ b/final/chromatic.tex
@@ -140,8 +140,8 @@ edge probability and order, so the worst case for each order is assumed to be at
 \end{figure}
 
 A graph of the \(P=90\%\) values for each order is shown in \figurename~\ref{fig:edwards1:runtime}.  Note that the
-runtime complexity is \(\BO(n^2)\) as expected.  Thus, the Edwards Elphick algorithm would be suitable for use as a
-lower bound approximator step in a branch-and-bound algorithm.
+runtime complexity is \(\BO(n^2)\).  Thus, the Edwards Elphick algorithm would be suitable for use as a lower bound
+approximator step in a branch-and-bound algorithm.
 
 \begin{figure}[H]
   \centering
@@ -175,7 +175,7 @@ The increase in the number of steps is demonstrated in \figurename~\ref{fig:edwa
 \end{figure}
 
 And the new runtime complexity approximation is shown in \figurename~\ref{fig:edwards2:runtime}.  The improved
-algorithm is still \(\BO(n^2\).
+algorithm is still \(\BO(n^2)\).
 
 \begin{figure}[H]
   \centering
