Added runtime data

--- a/final/acknowledgments.tex
+++ b/final/acknowledgments.tex
@@ -3,6 +3,9 @@ Dr. Sogol Jahanbekam, undergraduate advisor Dr. Tim Hsu, committee members Dr. W
 and Mathematics department chairperson Dr. Bem Cayco.  Special thanks are also extended to our mechanical
 engineering colleagues Dr. Sara Behdad and graduate student Praveen Gopalakrishnan at SUNY, Buffalo.
 
+And, for those of us who believe, thanks be to God, who as the intelligent designer of the universe is the source
+of all things creative.
+
 This material is based upon work supported by the National Science Foundation–USA under grants \#CMMI-1727190 and
 CMMI-1727743. Any opinions, findings, and conclusions or recommendations expressed in this material are those of
 the author and do not necessarily reflect the views of the National Science Foundation.
