--- a/final/random.tex
+++ b/final/random.tex
@@ -209,3 +209,24 @@ increased effectiveness at higher orders.
 \end{figure}
 
 \subsection{Runtime Duration Results}
+
+\begin{figure}[H]
+  \centering
+  \includegraphics[width=5in]{duration_10}
+  \caption{Runtime durations at \(n=10\).}
+  \label{fig:duration10}
+\end{figure}
+
+\begin{figure}[H]
+  \centering
+  \includegraphics[width=5in]{duration_15}
+  \caption{Runtime durations at \(n=15\).}
+  \label{fig:duration15}
+\end{figure}
+
+\begin{figure}[H]
+  \centering
+  \includegraphics[width=5in]{duration_20}
+  \caption{Runtime durations at \(n=20\).}
+  \label{fig:duration20}
+\end{figure}
